fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Ukjent",
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikon",
   "OAuth client icon": "OAuth-klientikon",
   "My App": "Min app",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotering vil ugyldiggjøre gjeldende klientnøkkel. Sørg for å oppdatere alle applikasjoner med disse nøklene.",
   "Displayed to users when authorizing": "Vist til brukere ved autorisering",
   "Application icon": "Applikasjonsikon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Utviklerinformasjon som vises til brukere ved autorisering",
   "Developer name": "Utviklernavn",
   "Developer URL": "Utvikler-URL",
