--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -785,17 +785,19 @@
   "Observing {{ userName }}": "Observing {{ userName }}",
   "Backlinks": "Backlinks",
   "This document is large which may affect performance": "This document is large which may affect performance",
+  "Couldn't archive the {{noun}}, try again": "Couldn't archive the {{noun}}, try again",
   "{{ count }} documents archived": "{{ count }} documents archived",
   "{{ count }} documents archived_plural": "{{ count }} documents archived",
-  "{{ successCount }} archived, {{ errorCount }} failed": "{{ successCount }} archived, {{ errorCount }} failed",
+  "{{ errorCount }} documents failed to archive, try again?": "{{ errorCount }} documents failed to archive, try again?",
   "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
   "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results._plural": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
   "Archiving this document will remove it from the collection and search results.": "Archiving this document will remove it from the collection and search results.",
-  "{{ successCount }} deleted, {{ errorCount }} failed": "{{ successCount }} deleted, {{ errorCount }} failed",
+  "Couldn’t delete the {{noun}}, try again?": "Couldn’t delete the {{noun}}, try again?",
+  "{{ errorCount }} documents failed to delete, try again?": "{{ errorCount }} documents failed to delete, try again?",
   "{{ count }} documents deleted": "{{ count }} documents deleted",
   "{{ count }} documents deleted_plural": "{{ count }} documents deleted",
-  "Document deleted.": "Document deleted.",
-  "Document archived.": "Document archived.",
+  "Document deleted": "Document deleted",
+  "{{ successCount }} archived, {{ errorCount }} failed": "{{ successCount }} archived, {{ errorCount }} failed",
   "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.": "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.",
   "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history._plural": "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
@@ -807,11 +809,11 @@
   "If you’d like the option of referencing or restoring the document in the future, consider archiving it instead.": "If you’d like the option of referencing or restoring the document in the future, consider archiving it instead.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?",
   "Select a location to move": "Select a location to move",
+  "Couldn’t move the {{noun}}, try again?": "Couldn’t move the {{noun}}, try again?",
   "Document moved": "Document moved",
   "{{ count }} documents moved": "{{ count }} documents moved",
   "{{ count }} documents moved_plural": "{{ count }} documents moved",
   "{{ successCount }} moved, {{ errorCount }} failed": "{{ successCount }} moved, {{ errorCount }} failed",
-  "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
   "Move {{ count }} documents to <em>{{ location }}</em>": "Move {{ count }} documents to <em>{{ location }}</em>",
   "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
   "Select a location to move {{ count }} documents": "Select a location to move {{ count }} documents",
