--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -785,7 +785,7 @@
   "Observing {{ userName }}": "Observing {{ userName }}",
   "Backlinks": "Backlinks",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "Couldn't archive the {{noun}}, try again": "Couldn't archive the {{noun}}, try again",
+  "Couldn't archive the {{noun}}, try again?": "Couldn't archive the {{noun}}, try again?",
   "{{ count }} documents archived": "{{ count }} documents archived",
   "{{ count }} documents archived_plural": "{{ count }} documents archived",
   "{{ errorCount }} documents failed to archive, try again?": "{{ errorCount }} documents failed to archive, try again?",
@@ -797,6 +797,7 @@
   "{{ count }} documents deleted": "{{ count }} documents deleted",
   "{{ count }} documents deleted_plural": "{{ count }} documents deleted",
   "Document deleted": "Document deleted",
+  "Couldn’t archive the {{noun}}, try again?": "Couldn’t archive the {{noun}}, try again?",
   "{{ successCount }} archived, {{ errorCount }} failed": "{{ successCount }} archived, {{ errorCount }} failed",
   "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.": "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.",
   "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history._plural": "Are you sure you want to delete these <em>{{ count }} documents</em>? This action will delete all their history.",
@@ -813,7 +814,7 @@
   "Document moved": "Document moved",
   "{{ count }} documents moved": "{{ count }} documents moved",
   "{{ count }} documents moved_plural": "{{ count }} documents moved",
-  "{{ successCount }} moved, {{ errorCount }} failed": "{{ successCount }} moved, {{ errorCount }} failed",
+  "{{ errorCount }} documents failed to move, try again?": "{{ errorCount }} documents failed to move, try again?",
   "Move {{ count }} documents to <em>{{ location }}</em>": "Move {{ count }} documents to <em>{{ location }}</em>",
   "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
   "Select a location to move {{ count }} documents": "Select a location to move {{ count }} documents",
