--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -181,7 +181,6 @@
   "currently viewing": "currently viewing",
   "previously edited": "previously edited",
   "You": "You",
-  "Selection cleared due to changes in permissions or document state.": "Selection cleared due to changes in permissions or document state.",
   "Archive {{ count }} documents": "Archive {{ count }} documents",
   "Archive {{ count }} documents_plural": "Archive {{ count }} documents",
   "Delete {{ count }} documents": "Delete {{ count }} documents",
@@ -790,8 +789,8 @@
   "{{ count }} documents archived": "{{ count }} documents archived",
   "{{ count }} documents archived_plural": "{{ count }} documents archived",
   "{{ errorCount }} documents failed to archive, try again?": "{{ errorCount }} documents failed to archive, try again?",
-  "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
-  "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results._plural": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
+  "Are you sure you want to archive these <em>{{ count }} documents</em>? They will be removed from collections and search results.": "Are you sure you want to archive these <em>{{ count }} documents</em>? They will be removed from collections and search results.",
+  "Are you sure you want to archive these <em>{{ count }} documents</em>? They will be removed from collections and search results._plural": "Are you sure you want to archive these <em>{{ count }} documents</em>? They will be removed from collections and search results.",
   "Archiving this document will remove it from the collection and search results.": "Archiving this document will remove it from the collection and search results.",
   "Couldn’t delete the {{noun}}, try again?": "Couldn’t delete the {{noun}}, try again?",
   "{{ errorCount }} documents failed to delete, try again?": "{{ errorCount }} documents failed to delete, try again?",
