--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "Démarrer l'importation",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Traitement en cours",
   "Expired": "Expiré",
   "Completed": "Terminé",
