--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "Import starten",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "Wird ausgeführt",
   "Expired": "Abgelaufen",
   "Completed": "Erledigt",
