--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "가져오기 시작",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "처리중",
   "Expired": "만료",
   "Completed": "완료",
