--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "İçe aktarmayı başlat",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "İşleniyor",
   "Expired": "Süresi doldu",
   "Completed": "Tamamlandı",
