--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "开始导入",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "处理中",
   "Expired": "已过期",
   "Completed": "已完成",
