fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "開始匯入",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "正在處理",
   "Expired": "已逾時",
   "Completed": "已完成",
