--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -1018,6 +1018,9 @@
   "Start import": "شروع ایمپورت",
   "Added by": "Added by",
   "Date added": "Date added",
+  "Members exported successfully": "Members exported successfully",
+  "Failed to export members": "Failed to export members",
+  "Download CSV": "Download CSV",
   "Processing": "در حال پردازش",
   "Expired": "منقضی شده",
   "Completed": "تکمیل شد",
