fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "Je hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
   "Apply template": "Sjabloon toepassen",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "Nieuwe emoji",
+  "Upload emoji": "Emoji uploaden",
   "Disconnect": "Ontkoppel",
   "Disconnect analytics": "Analytics ontkoppelen",
   "Home": "Startscherm",
@@ -256,20 +256,20 @@
   "Currently editing": "Momenteel aan het bewerken",
   "Currently viewing": "Momenteel aan het bekijken",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} bekeken",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Bestandstype niet ondersteund. Gebruik PNG, JPG, GIF of WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Bestand is te groot. Maximale grootte is {{ size }}.",
+  "Please enter a name for the emoji": "Voer een naam in voor de emoji",
+  "Please select an image file": "Selecteer een afbeeldingsbestand",
+  "Emoji created successfully": "Emoji met succes aangemaakt",
   "Uploading": "Bezig met uploaden",
-  "Add emoji": "Add emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
-  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "This emoji will be available as": "This emoji will be available as",
+  "Add emoji": "Emoji toevoegen",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "De naam van de emoji moet uniek zijn en mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
+  "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
+  "Click or drag to replace": "Klik of sleep om te vervangen",
+  "Drop the image here": "Sleep de afbeelding hierheen",
+  "Click, drop, or paste an image here": "Klik, plaats of plak hier een afbeelding",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, of WebP tot {{ size }}",
+  "This emoji will be available as": "Deze emoji zal beschikbaar zijn als",
   "Module failed to load": "Module kon niet geladen worden",
   "Loading Failed": "Laden mislukt",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, een deel van de toepassing kon niet geladen worden. Dit kan komen doordat het is bijgewerkt sinds het tabblad is geopend of door een mislukt netwerkverzoek. Probeer het opnieuw te laden.",
@@ -316,7 +316,7 @@
   "Icon Picker": "Pictogrammenkiezer",
   "Icons": "Pictogrammen",
   "Emojis": "Emoji's",
-  "Custom Emojis": "Custom Emojis",
+  "Custom Emojis": "Aangepaste Emoji's",
   "Custom": "Aangepast",
   "Remove": "Verwijder",
   "All": "Alle",
@@ -341,7 +341,7 @@
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Zoom in": "Inzoomen",
   "Zoom out": "Uitzoomen",
-  "Edit diagram": "Edit diagram",
+  "Edit diagram": "Diagram bewerken",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
@@ -353,11 +353,11 @@
   "Unknown": "Onbekend",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
-  "Client type": "Client type",
-  "Confidential": "Confidential",
-  "Suitable for server-side applications": "Suitable for server-side applications",
-  "Public": "Public",
-  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
+  "Client type": "Type klant",
+  "Confidential": "Vertrouwelijk",
+  "Suitable for server-side applications": "Geschikt voor server-side toepassingen",
+  "Public": "Openbaar",
+  "Suitable for client-side or mobile applications": "Geschikt voor klanten- of mobiele applicaties",
   "Icon": "Icon",
   "OAuth client icon": "OAuth cliënt icoon",
   "My App": "Mijn App",
@@ -374,8 +374,8 @@
   "Reaction picker": "Reactie kiezer",
   "Could not load reactions": "Kon reacties niet laden",
   "Reaction": "Reactie",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}u {{ minutes }}m gelezen",
+  "{{ hours }}h read": "{{ hours }}u gelezen",
   "{{ minutes }}m read": "{{ minutes }}m gelezen",
   "Revision deleted": "Revisie verwijderd",
   "Current version": "Huidige versie",
@@ -621,9 +621,9 @@
   "Comment options": "Opties voor reageren",
   "Enable viewer insights": "Schakel viewer inzichten uit",
   "Enable embeds": "Embeds inschakelen",
-  "Delete Emoji": "Delete Emoji",
-  "Emoji deleted": "Emoji deleted",
-  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
+  "Delete Emoji": "Emoji verwijderen",
+  "Emoji deleted": "Emoji verwijderd",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Weet je zeker dat je de emoji <em>{{emojiName}}</em> wilt verwijderen? Je kunt het niet meer gebruiken in je documenten of collecties.",
   "File": "Bestand",
   "Group members": "Groepsleden",
   "Edit group": "Wijzig groep",
@@ -690,7 +690,7 @@
   "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
   "Add a description": "Beschrijving toevoegen",
   "Overview": "Overzicht",
-  "Popular": "Popular",
+  "Popular": "Populair",
   "Recently updated": "Onlangs bijgewerkt",
   "Recently published": "Onlangs gepubliceerd",
   "Least recently updated": "Minst recent bijgewerkt",
@@ -808,8 +808,8 @@
   "Something went wrong": "Er ging iets mis",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, er is een onbekende fout opgetreden bij het laden van de pagina. Probeer het opnieuw of neem contact op met ondersteuning als het probleem zich blijft voordoen.",
   "Created by me": "Door mij aangemaakt",
-  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
-  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
+  "Weird, this shouldn't ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
+  "Documents with recent activity will appear here": "Documenten met recente activiteit verschijnen hier",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
   "{{ count }} invites sent": "{{ count }} uitnodigingen verzonden",
@@ -980,7 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Het opnieuw genereren van het clientgeheim zal het huidige geheim ongeldig maken. Zorg ervoor dat je alle applicaties met behulp van deze inloggegevens bijwerkt.",
   "Displayed to users when authorizing": "Weergegeven aan gebruikers bij autorisatie",
   "Application icon": "App-icoon",
-  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
+  "Confidential clients can securely store a secret": "Vertrouwelijke klanten kunnen een geheim veilig opslaan",
   "Developer information shown to users when authorizing": "Ontwikkelaarsinformatie die wordt getoond aan gebruikers bij autoriseren",
   "Developer name": "Ontwikkelaar naam",
   "Developer URL": "Ontwikkelaar URL",
@@ -1016,11 +1016,11 @@
   "File not supported – please upload a valid ZIP file": "Bestand niet ondersteund – upload een geldig ZIP-bestand",
   "Set the default permission level for collections created from the import": "Stel het standaard machtingsniveau in voor collecties vanuit de import",
   "Start import": "Start importeren",
-  "Added by": "Added by",
-  "Date added": "Date added",
-  "Members exported successfully": "Members exported successfully",
-  "Failed to export members": "Failed to export members",
-  "Download CSV": "Download CSV",
+  "Added by": "Toegevoegd door",
+  "Date added": "Datum toegevoegd",
+  "Members exported successfully": "Leden succesvol geëxporteerd",
+  "Failed to export members": "Leden exporteren is mislukt",
+  "Download CSV": "CSV downloaden",
   "Processing": "Verwerken",
   "Expired": "Verlopen",
   "Completed": "Voltooid",
@@ -1090,8 +1090,8 @@
   "Editors": "Redacteurs",
   "All status": "Alle statussen",
   "Active": "Actief",
-  "Could not load emojis": "Could not load emojis",
-  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
+  "Could not load emojis": "Kon emoji's niet laden",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Aangepaste emoji's kunnen worden gebruikt in je hele werkruimte in documenten, opmerkingen en reacties.",
   "Left": "Links",
   "Right": "Rechts",
   "Settings saved": "Instellingen opgeslagen",
@@ -1253,9 +1253,9 @@
   "Expires today": "Verloopt vandaag",
   "Expires tomorrow": "Verloopt morgen",
   "Expires {{ date }}": "Verlopen {{ date }}",
-  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
-  "Installation URL": "Installation URL",
-  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configureer een aangepaste Diagrams.net installatie-URL om je eigen zelfgehoste instantie te gebruiken voor het insluiten van diagrammen in uw documenten.",
+  "Installation URL": "Installatie-URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "De URL van je Diagrams.net installatie. Laat leeg om de cloud gehoste app.diagrams.net te gebruiken.",
   "New attribute": "Nieuw kenmerk",
   "Paper size": "Papierformaat",
   "Ask AI \"{{question}}\"": "Vraag AI \"{{question}}\"",
