--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -600,7 +600,7 @@
   "None": "None",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
-  "Distribute width evenly": "Distribute width evenly",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
