fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -599,6 +599,7 @@
   "None": "Abc",
   "Delete embed": "Supprimer l'intégration",
   "Upload an image": "Ajouter une image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
