fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -599,6 +599,7 @@
   "None": "Nada",
   "Delete embed": "Eliminar incrustado",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "No se pudo importar el archivo",
   "Unsubscribed from document": "Desuscrito del documento",
   "Unsubscribed from collection": "Dado de baja de la colección",
