fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -599,6 +599,7 @@
   "None": "Žádný",
   "Delete embed": "Odstranit vložené",
   "Upload an image": "Nahrát obrázek",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
   "Unsubscribed from collection": "Odhlásit ze sbírky",
