fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -599,6 +599,7 @@
   "None": "Nincs",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Fájl importálása nem lehetséges",
   "Unsubscribed from document": "Leiratkozott a dokumentumról",
   "Unsubscribed from collection": "Leiratkozott a dokumentumról",
