fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -599,6 +599,7 @@
   "None": "なし",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "ファイルをインポートできませんでした",
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
