fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -599,6 +599,7 @@
   "None": "없음",
   "Delete embed": "임베드 삭제",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "파일을 가져올 수 없음",
   "Unsubscribed from document": "문서 구독이 취소됨",
   "Unsubscribed from collection": "컬렉션 구독 취소",
