fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -599,6 +599,7 @@
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
   "Upload an image": "Afbeelding uploaden",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
