fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -599,6 +599,7 @@
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
   "Upload an image": "Prześlij obraz",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
