fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -599,6 +599,7 @@
   "None": "Nenhum",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
   "Unsubscribed from collection": "Unsubscribed from collection",
