fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -599,6 +599,7 @@
   "None": "Không",
   "Delete embed": "Xóa phần nhúng",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
