fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -599,6 +599,7 @@
   "None": "Nada",
   "Delete embed": "Deletar embed",
   "Upload an image": "Upload an image",
+  "Distribute columns": "Distribute columns",
   "Could not import file": "Não foi possível importar o arquivo",
   "Unsubscribed from document": "Cancelada inscrição do documento",
   "Unsubscribed from collection": "Cancelada inscrição da coleção",
