fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -599,6 +599,7 @@
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
   "Upload an image": "Bild hochladen",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Datei konnte nicht importiert werden",
   "Unsubscribed from document": "Dokument nicht abonniert",
