--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -599,6 +599,7 @@
   "None": "Nessuno",
   "Delete embed": "Elimina incorporamento",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Impossibile importare il file",
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
