--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -599,6 +599,7 @@
   "None": "Nenhum",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
