fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -599,6 +599,7 @@
   "None": "Ingen",
   "Delete embed": "Ta bort inbäddning",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Kan inte importera fil",
   "Unsubscribed from document": "Prenumeration avslutad från dokument",
