fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -599,6 +599,7 @@
   "None": "Hiçbiri",
   "Delete embed": "Yerleştirmeyi sil",
   "Upload an image": "Bir görsel yükle",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Dosya içe aktarılamadı",
   "Unsubscribed from document": "Belgeden abonelik iptal edildi",
