--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -599,6 +599,7 @@
   "None": "空",
   "Delete embed": "删除嵌入",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "无法导入文件",
   "Unsubscribed from document": "取消订阅文档",
