--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -599,6 +599,7 @@
   "None": "無",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "無法匯入檔案",
   "Unsubscribed from document": "取消訂閱文件",
