--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -599,6 +599,7 @@
   "None": "هیچ‌کدام",
   "Delete embed": "حذف جاسازی",
   "Upload an image": "بارگذاری تصویر",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "خطا هنگام افزودن فایل",
   "Unsubscribed from document": "دریافت اعلان‌های این سند متوقف شد",
