--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -599,6 +599,7 @@
   "None": "None",
   "Delete embed": "Delete embed",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "ไม่สามารถนำเข้าไฟล์ได้",
   "Unsubscribed from document": "Unsubscribed from document",
