fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -599,6 +599,7 @@
   "None": "Ingen",
   "Delete embed": "Slett embed",
   "Upload an image": "Upload an image",
+  "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Kunne ikke importere fil",
   "Unsubscribed from document": "Avsluttet abonnement fra dokument",
