fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -263,12 +263,14 @@
   "Emoji created successfully": "Emoji byl úspěšně vytvořen",
   "Uploading": "Nahrávání",
   "Add emoji": "Přidat emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "Název emoji by měl být jedinečný a obsahovat pouze malá písmena, čísla a podtržítka.",
-  "name can only contain lowercase letters, numbers, and underscores.": "název může obsahovat pouze malá písmena, číslice a podtržítka.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Nahrát obrázek",
   "Click or drag to replace": "Kliknutím nebo přetažením nahradíte",
   "Drop the image here": "Sem přetáhněte obrázek",
   "Click, drop, or paste an image here": "Klikněte, pošlete nebo vložte obrázek sem",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF nebo WebP až do {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "název může obsahovat pouze malá písmena, číslice a podtržítka.",
   "This emoji will be available as": "Toto emoji bude k dispozici jako",
   "Module failed to load": "Modul se nepodařilo načíst",
   "Loading Failed": "Načítání selhalo",
@@ -598,7 +600,6 @@
   "Video": "Video",
   "None": "Žádný",
   "Delete embed": "Odstranit vložené",
-  "Upload an image": "Nahrát obrázek",
   "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Soubor nelze importovat",
