--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -263,12 +263,14 @@
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "Wird hochgeladen",
   "Add emoji": "Add emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Bild hochladen",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul konnte nicht geladen werden",
   "Loading Failed": "Laden fehlgeschlagen",
@@ -598,7 +600,6 @@
   "Video": "Video",
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
-  "Upload an image": "Bild hochladen",
   "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "Datei konnte nicht importiert werden",
