--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -263,12 +263,14 @@
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "アップロード中",
   "Add emoji": "Add emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "モジュールの読み込みに失敗しました",
   "Loading Failed": "読み込みに失敗しました",
@@ -598,7 +600,6 @@
   "Video": "動画",
   "None": "なし",
   "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
   "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "ファイルをインポートできませんでした",
