fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -263,12 +263,14 @@
   "Emoji created successfully": "Emoji created successfully",
   "Uploading": "업로드 중",
   "Add emoji": "Add emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Upload an image",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "모듈 불러오기 실패",
   "Loading Failed": "불러오기 실패",
@@ -598,7 +600,6 @@
   "Video": "동영상",
   "None": "없음",
   "Delete embed": "임베드 삭제",
-  "Upload an image": "Upload an image",
   "Formatting controls": "Formatting controls",
   "Distribute columns": "Distribute columns",
   "Could not import file": "파일을 가져올 수 없음",
