fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -263,12 +263,14 @@
   "Emoji created successfully": "Emoji met succes aangemaakt",
   "Uploading": "Bezig met uploaden",
   "Add emoji": "Emoji toevoegen",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "De naam van de emoji moet uniek zijn en mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
-  "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Upload an image": "Afbeelding uploaden",
   "Click or drag to replace": "Klik of sleep om te vervangen",
   "Drop the image here": "Sleep de afbeelding hierheen",
   "Click, drop, or paste an image here": "Klik, plaats of plak hier een afbeelding",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, of WebP tot {{ size }}",
+  "Choose a name": "Choose a name",
+  "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
   "This emoji will be available as": "Deze emoji zal beschikbaar zijn als",
   "Module failed to load": "Module kon niet geladen worden",
   "Loading Failed": "Laden mislukt",
@@ -598,7 +600,6 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Upload an image": "Afbeelding uploaden",
   "Formatting controls": "Formatting controls",
   "Distribute columns": "Kolommen verdelen",
   "Could not import file": "Kon bestand niet importeren",
