--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -352,6 +352,7 @@
   "Click to retry": "Click to retry",
   "Back": "Back",
   "Unknown": "Unknown",
+  "Mentions": "Mentions",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
   "Client type": "Client type",
